Add level 2 book gumroad link. Update installation FAQ for Windows Termincal Server.